--- a/day2/css/main.css
+++ b/day2/css/main.css
@@ -139,17 +139,18 @@ p.speech:after{
 
 #result {
     display: none;
-    width: 100%;
-    height: 200px;
+    width: 900px;
+    height: 100%;
     border: 5px solid #fff;
     font-family: Helvetica, arial, sans-serif;
     font-size: 3rem;
-    line-height: 300%;
+    line-height: 150%;
 }
 
 .button {
     margin: 0 auto;
-    margin-top: -10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     width: 200px;
     height: 50px;
     font-size: 1.5rem;
