--- a/day3/css/main.css
+++ b/day3/css/main.css
@@ -42,3 +42,18 @@ body {
     background-color: #222;
     color: #F4FF1F;
 }
+
+footer {
+    padding-top: 5px;
+    text-align: center;
+    font-size: 0.5rem;
+}
+
+footer a {
+    color: #222;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
