--- a/day3/css/main.css
+++ b/day3/css/main.css
@@ -35,7 +35,8 @@ body {
 #button {
     border: 2px solid #222;
     padding: 5px;
-    margin-left: 40px;
+    /*margin-left: 40px;*/
+    width: 100%;
 }
 
 #button:hover {
