--- a/day4/css/main.css
+++ b/day4/css/main.css
@@ -74,3 +74,18 @@ h2 {
 #yellow {
     background-color: #FCEE21;
 }
+
+footer {
+    margin-top: 25px;
+    text-align: center;
+    font-family: helvetica, arial, sans-serif;
+}
+
+footer a {
+    text-decoration: none;
+    color: #222;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
