--- a/day26/css/master.css
+++ b/day26/css/master.css
@@ -1,42 +1,85 @@
-/**************************************
-        GENERAL STYLING
-**************************************/
+/******************************************************************
+                        GENERAL STYLING
+******************************************************************/
+
 * {
     margin: 0;
     padding: 0;
 }
 
 html, body {
-    width: 100%;
     height: 100%;
-}
-
-body {
-    background: url('../img/bg.png') fixed;
-}
-
-p {
-    color: #fff;
-    font-size: 3em;
-    margin: 10px;
-}
-
-
-
-
-/**************************************
-        PARALLAX STYLING
-**************************************/
-
-#para_lyr_1 {
-    position: fixed;
-    background: url('../img/tri.png') no-repeat 0 200px;
-    background-size: contain;
     width: 100%;
-    height: 800px;
-    opacity: 0.6;
+    background-color: #317873;
+    overflow: hidden;
+    font-family: 'Open Sans Condensed', 'Helvetica', Arial, sans-serif;
 }
 
-#content_layer {
+
+
+/******************************************************************
+                        CANVAS STYLING
+******************************************************************/
+
+canvas {
+    display: block;
+    margin:  150px auto 0;
+    background-color: #5f9ea0;
+}
+
+
+
+
+/******************************************************************
+                        CONTAINER STYLING
+******************************************************************/
+
+.container {
     position: absolute;
+    width: 370px;
+    height: 150px;
+    /*background-color: #49796b;*/
+    text-align: center;
+}
+
+.title {
+    color: #5f9ea0;
+    font-weight: 300;
+    letter-spacing: 5px;
+    font-size: 4em;
+}
+
+h2 {
+    color: #a3c1ad;
+    font-weight: 300;
+    letter-spacing: 3px;
+    margin-left: -50px;
+}
+
+#score {
+    font-weight: 900;
+}
+/******************************************************************
+                        FOOTER STYLING
+******************************************************************/
+footer {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 0.8rem;
+    color: #5f9ea0;
+    letter-spacing: 2px;
+}
+
+footer a {
+    text-decoration: none;
+    color: #5f9ea0;
+}
+
+
+footer a:hover {
+    color: #a3c1ad;
+    border-bottom: 1px solid #a3c1ad;
 }
