--- a/day34/css/master.css
+++ b/day34/css/master.css
@@ -9,7 +9,7 @@
 html, body {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    /*overflow: auto;*/
     margin-bottom: 2%;
     color: #1FAFB3;
     background-color: #F1F1F1;
@@ -18,12 +18,11 @@ html, body {
 
 
 .wrapper {
-    width: 100%;
+    width: 80%;
     height: 70%;
     margin: 2% auto 0;
     margin-bottom: 10px;
     /*border: 1px solid #000;*/
-    padding-left: 10%;
 }
 
 
@@ -45,11 +44,10 @@ html, body {
     left: 0;
     margin-right: 5%;
     height: 90%;
-    width: 40%;
+    width: 50%;
     float: left;
     text-align: center;
     margin-top: 1%;
-    /*border: 1px solid #000*/
 
 }
 
@@ -323,12 +321,11 @@ html, body {
 ********************************************************/
 
 .IDE {
-    width: 35%;
+    width: 40%;
     height: 100%;
     background-color: gray;
-    float: left;
+    float: right;
     margin-top: 1%;
-    /*border: 1px solid #000*/
 }
 
 
@@ -528,7 +525,7 @@ footer {
     z-index: 101;
     bottom: 0;
     text-align: center;
-    margin-bottom:2px;
+    margin-bottom: 2px;
     font-size: 0.6rem;
     color: 	#1FAFB3;
 }
@@ -564,19 +561,16 @@ footer a:hover {
         margin-left: 30px;
     }
 
-    .wrapper {
-        padding-left: 0:
-    }
 
     html, body {
-        overflow-y: auto;
+        /*overflow: auto;*/
     }
 
     div[class^="container"] {
         float: none;
-        width: 60%;
-        margin: auto;
-        padding-bottom: 20%;
+        width: 80%;
+        margin: 0 auto 25%;
+        /*padding-bottom: 20%;*/
     }
 
     div[class^="IDE"] {
@@ -584,6 +578,7 @@ footer a:hover {
         margin: auto;
         width: 60%;
         padding-bottom: 0;
+        margin-bottom: 5px;
     }
 
 }
@@ -591,24 +586,24 @@ footer a:hover {
 
 @media screen and (max-width: 940px) {
 
-    html, body {
-        overflow-y: auto;
-    }
+
 
     div[class^="container"], div[class^="IDE"]{
-        float: none;
-        width: 70%;
-        margin: auto;
-        padding-bottom: 30%;
+        /*float: none;*/
+        /*width: 70%;
+        margin: auto;*/
+        /*padding-bottom: 30%;*/
+        margin-bottom: 20%;
     }
 
     div[class^="IDE"]{
-        width: 60%;
-        padding-bottom: 0;
+        /*width: 60%;
+        padding-bottom: 0;*/
+        /*margin-top:100%;*/
     }
 
     .svg-container {
-        width: 60%:
+        width: 100%:
     }
 
 }
@@ -617,10 +612,10 @@ footer a:hover {
 @media screen and (max-width: 900px) {
 
     .wrapper {
-        padding-left: 0:
+        width: 100%;
     }
 
-    div[class^="container"], div[class^="IDE"]{
+    /*div[class^="container"], div[class^="IDE"]{
         float: none;
         width: 90%;
         margin: auto;
@@ -629,8 +624,12 @@ footer a:hover {
 
     div[class^="IDE"]{
         padding-bottom: 0;
-    }
+    }*/
 
+        div[class^="IDE"]{
+            width: 60%;
+            margin-top: 30%;
+        }
 
     .button-layer{
         margin-top: 50px;
@@ -652,6 +651,30 @@ footer a:hover {
 
 }
 
+@media screen and (max-width: 800px) {
+
+    div[class^="IDE"]{
+        width: 70%;
+        margin-top: 10%;
+    }
+
+    /*div[class^="container"]{
+        margin-bottom: 22%;
+    }*/
+}
+
+@media screen and (max-width: 700px) {
+
+    div[class^="IDE"]{
+        width: 80%;
+        margin-top: 1%;
+    }
+
+    div[class^="container"] {
+        margin-bottom: 15%;
+    }
+}
+
 
 @media screen and (max-width: 650px) {
     .text{
@@ -662,5 +685,18 @@ footer a:hover {
     .diods {
         width: 1rem;
         height: 1rem;
+    }
+}
+
+
+@media screen and (max-width: 450px){
+    div[class^="IDE"]{
+        width: 90%;
+        margin-top: -1%;
+    }
+
+    div[class^="container"] {
+        width: 100%;
+        margin-bottom: 0;
     }
 }
