--- a/css/main.css
+++ b/css/main.css
@@ -182,6 +182,23 @@ span.days{
 
 }
 
+/* canvas */
+canvas {
+  /* -webkit-animation: float 8s ease-in-out forwards; */
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%)translateZ(0);
+  height: 50%;
+}
+@-webkit-keyframes float {
+  0% {
+    -webkit-transform: translateX(-50%)translateZ(0)translateY(100%);
+  }
+  100% {
+    -webkit-transform: translateX(-50%)translateZ(0)translateY(50%);
+  }
+}
+
 
 /* content */
 section {
