--- a/day43/css/master.css
+++ b/day43/css/master.css
@@ -79,7 +79,7 @@ html, body {
   color: rgba(252, 252, 252, 1);
 }
 
-#topCurrencySelector {
+#topCurrencySelector, #bottomCurrencySelector {
   /* remove defualt styling */
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -104,7 +104,7 @@ html, body {
   text-align: right;
 }
 
-#topCurrencySelector:focus {
+#topCurrencySelector:focus, #bottomCurrencySelector:focus {
   outline: 1px solid #a9db80; /* This is the focuse style*/
 }
 
@@ -124,6 +124,14 @@ html, body {
 
 #bottomCurrancy::-webkit-input-placeholder {
   color: rgba(169, 219, 128, 0.7);
+}
+
+#bottomCurrencySelector {
+  background-image: url("../img/green-arrow.png");
+  top: 320px;
+  right: 80px;
+  background-color: rgba(250,250,250,0.9);
+  color: #a9db80;
 }
 
 
@@ -189,7 +197,7 @@ footer a:hover {
   .container {
     max-width: 35%;
   }
-  #topCurrencySelector {
+  #topCurrencySelector, #bottomCurrencySelector {
     right: 50px;
   }
 }
@@ -199,7 +207,7 @@ footer a:hover {
     max-width: 35%;
   }
 
-  #topCurrencySelector {
+  #topCurrencySelector, #bottomCurrencySelector {
     right: 50px;
   }
 }
@@ -221,7 +229,7 @@ footer a:hover {
     max-width: 50%;
   }
 
-  #topCurrencySelector {
+  #topCurrencySelector, #bottomCurrencySelector {
     right: 50px;
   }
 }
@@ -231,7 +239,7 @@ footer a:hover {
     max-width: 55%;
   }
 
-  #topCurrencySelector {
+  #topCurrencySelector, #bottomCurrencySelector {
     right: 40px;
   }
 }
@@ -241,7 +249,7 @@ footer a:hover {
     max-width: 70%;
   }
 
-  #topCurrencySelector {
+  #topCurrencySelector, #bottomCurrencySelector {
     right: 50px;
   }
 }
